<resources>
    <string name="app_name">Retrofit-CRUD</string>
    <string name="add">add book</string>
    <string name="add_book">add book</string>
    <string name="book_id">Book id:</string>
    <string name="book_title">Book title:</string>
    <string name="book_author">Author of book:</string>
    <string name="book_description">Description:</string>
    <string name="book_date">Publish date:</string>
    <string name="add_or_update">Add / Update</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
