<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable
            name="viewModel"
            type="com.brewhog.android.retrofit_crud.viewmodel.BookViewModel" />
        <variable
            name="book"
            type="com.brewhog.android.retrofit_crud.model.Book" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_id"
            />
        <EditText
            android:id="@+id/bookId"
            android:text="@={viewModel.book.id}"
            android:layout_width="match_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            />
        <EditText
            android:id="@+id/book_title_edit_text"
            android:text="@={viewModel.book.title}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            />
        <EditText
            android:id="@+id/book_author_edit_text"
            android:text="@={viewModel.book.author}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            />
        <EditText
            android:id="@+id/book_description_edit_text"
            android:text="@={viewModel.book.description}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_date"
            />
        <EditText
            android:id="@+id/bookPublished"
            android:text="@={viewModel.book.published}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginEnd="8dp"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">
            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()-> viewModel.addOrUpdateBook()}"
                android:text="@string/add_or_update"
                />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->viewModel.deleteBook()}"
                android:text="@string/delete"
                />
        </LinearLayout>
    </LinearLayout>
</layout>